Segundo commit agregue CSS y JavaScript

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,9 @@
-hola
+<html>
+<head>
+	<title>Venta de Comida</title>
+</head>
+<body>
+	<p id="p1">HTML es tan <strong>pendejo</strong> que me va costar aprender.</p>
+	<p>Ademas no tengo <strong>Idea</strong> tambien se pueden poner en <em>cursiva</em> o <del>tachados</del> </p>
+</body>
+</html>
