--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,10 @@
 </head>
 <body>
 	<p id="p1">HTML es tan <strong>pendejo</strong> que me va costar aprender.</p>
-	<p>Ademas no tengo <strong>Idea</strong> tambien se pueden poner en <em>cursiva</em> o <del>tachados</del> </p>
+	
+	<p id="p2">Ademas no tengo <strong>Idea</strong> tambien se pueden poner en <em>cursiva</em> o <del>tachados</del> </p>
+
+	<a id="enlace" href="http://www.google.com">Enlace</a>
+		
 </body>
 </html>
